Time slider no longer appears on mobile, footer no longer fixed on tablet or mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,7 @@
 
 
 /*VARIABLES*/
-$desktop-min: 1025px;
+$desktop-min: 1024px;
 $desktop-max: 1200px;
 $mobile-min: 481px;
 $mobile-max: 767px;
@@ -841,6 +841,15 @@ footer.footer{
 			padding: 1rem 0;
 		}
 	}
+
+	.clear-footer{
+		display: none;
+	}
+	footer.footer{
+		position: relative;
+		padding: .5rem 0;
+		font-size: .85rem;
+	}
 }
 
 @media(max-width: $tablet-max){
@@ -852,19 +861,27 @@ footer.footer{
 			}
 		}
 	}
-    .template-header__title{
-        /*flex: 1 0 60%;*/
-    }
-    .template-header__actions{
-        /*flex: 1 0 40%;*/
-        margin: .5rem 0;
-    }
-    .btn-group{
-        button{
-            font-size: .75rem;
-            padding: .5rem;
-        }
-    }
+  .template-header__title{
+      /*flex: 1 0 60%;*/
+  }
+  .template-header__actions{
+      /*flex: 1 0 40%;*/
+      margin: .5rem 0;
+  }
+  .btn-group{
+      button{
+          font-size: .75rem;
+          padding: .5rem;
+      }
+  }
+  .clear-footer{
+  	display: none;
+  }
+  footer.footer{
+  	position: relative;
+  	padding: .5rem 0;
+  	font-size: .85rem;
+  }
 }
 
 @media(max-width: $mobile-max)and(min-width: $mobile-min){
@@ -906,14 +923,14 @@ footer.footer{
 	.data-filters{
 		margin-top: 1rem;
 	}
-	.clear-footer{
-		display: none;
-	}
-	footer.footer{
-		position: relative;
-		padding: .5rem 0;
-		font-size: .85rem;
-	}
+	// .clear-footer{
+	// 	display: none;
+	// }
+	// footer.footer{
+	// 	position: relative;
+	// 	padding: .5rem 0;
+	// 	font-size: .85rem;
+	// }
 	.old-version-link{
 		text-align: center;
 		a{
